# dataset-from-precinct6

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  customer_config.example.json  pyproject.toml
data/: lead_rules_catalog.json
docs/: architecture.md  cassandra-schema.md  configuration.md  labeling.md  sanitization.md  schema.md
src/precinct6_dataset/: __init__.py  __main__.py  allowlists.py  attack_reports.py  cli.py  config.py  db.py  export_graph.py  export_signal.py  extract.py  label.py  mitre_mapping.py  patterns.py  registry.py  sanitize.py  sanitize_claude.py  sanitize_message.py  sanitize_ml.py  sanitize_structured.py  streaming_graphml.py  verify.py
src/precinct6_dataset/parsers/: aws_cloudtrail.py  cisco_asa.py  dns_event.py  generic.py  palo_alto.py  vmware.py  windows_xml.py  winlogbeat.py
tests/: test_config.py  test_label_confidence.py  test_labeler_integration.py  test_mitre_mapping.py  test_patterns.py
